# FreeCAD_sf_master

./: CMakeLists.txt
LibPack/: libpack.py  libpack_utils.py  patch.py
LibPack/BuildFormulas/: boost.py  coin.py  default.py  eigen.py  f2c.py  freeimage.py  freetype.py  netgen.py  occ.py  oce.py  pthreads.py  pyside.py  python.py  qt.py  shiboken.py  soqt.py  tcl.py  tk.py  xerces-c.py  zlib.py
LibPack/patches/: coin_macro_error.diff  f2c_makefile.diff  f2c_ssize_t.diff  freeimage_CMakeLists.txt  freeimage_algorithm.diff  freetype_CMakeLists.txt  freetype_dll_export.diff  netgen_dllexport1.diff  netgen_dllexport2.diff  netgen_dllexport3.diff  netgen_dllexport4.diff  netgen_occ67_1.diff  netgen_occ67_2.diff  netgen_occ67_3.diff  netgen_occ67_4.diff  netgen_vcproj.diff  pyside_rel_path1.diff  pyside_rel_path2.diff  pyside_sbk_fix.diff  python_prop_path.diff  python_pyconfig.diff  python_pyconfig2.diff  qt.diff  shiboken_d_suffix.diff  shiboken_rel_path1.diff  shiboken_rel_path2.diff  shiboken_vc12fix.diff
LibPack/patches/vc12/: boost.diff  coin_config.diff  soqt_vcproj.diff
bundle/: CMakeLists.txt  qt.conf
cMake/: FindCoin3D.cmake  FindF2C.cmake  FindNETGEN.cmake  FindXercesC.cmake  FreeCadMacros.cmake  InstallBundleDeps.cmake.in
src/App/: CMakeLists.txt
src/Base/: CMakeLists.txt  Handle.cpp  UnitsApi.cpp  Uuid.cpp
src/Gui/: Action.cpp  Application.cpp  BitmapFactory.cpp  CMakeLists.txt  CallTips.cpp  CombiView.cpp  Command.cpp  CommandDoc.cpp  CommandStd.cpp  CommandTest.cpp  CommandView.cpp  CommandWindow.cpp  Control.cpp  Control.h  DemoMode.cpp  DlgActionsImp.cpp  DlgActivateWindowImp.cpp  DlgActivateWindowImp.h  DlgCommandsImp.cpp  DlgCustomizeImp.cpp  DlgCustomizeSpaceball.cpp  DlgDisplayPropertiesImp.cpp  DlgDisplayPropertiesImp.h  DlgEditFileIncludeProptertyExternal.cpp  DlgEditFileIncludeProptertyExternal.h  DlgGeneralImp.cpp  DlgInputDialogImp.cpp  DlgKeyboardImp.cpp  DlgMacroExecuteImp.cpp  DlgMacroExecuteImp.h  DlgMacroRecordImp.cpp  DlgMacroRecordImp.h  DlgMaterialPropertiesImp.cpp  DlgParameterImp.cpp  DlgParameterImp.h  DlgPreferencesImp.cpp  DlgPreferencesImp.h  DlgProjectInformationImp.cpp  DlgProjectInformationImp.h  DlgProjectUtility.cpp  (+57 more)
src/Gui/Inventor/: SoAutoZoomTranslation.cpp
src/Gui/Language/: Translator.cpp
src/Gui/TaskView/: TaskAppearance.cpp  TaskSelectLinkProperty.cpp  TaskView.cpp  TaskView.h
src/Gui/iisTaskPanel/src/: iisfreecadscheme.cpp  iisiconlabel.cpp  iisiconlabel.h  iistaskbox.cpp  iistaskbox.h  iistaskgroup.cpp  iistaskgroup.h  iistaskheader.cpp  iistaskheader.h  iistaskpanel.cpp  iistaskpanel.h  iistaskpanelscheme.cpp  iistaskpanelscheme.h
src/Gui/propertyeditor/: PropertyItem.cpp  PropertyModel.cpp
src/Main/: CMakeLists.txt  FreeCADGuiPy.cpp  MainGui.cpp
src/Mod/: CMakeLists.txt
src/Mod/Arch/: CMakeLists.txt
src/Mod/Assembly/: CMakeLists.txt
src/Mod/Assembly/App/: CMakeLists.txt
src/Mod/Assembly/Gui/: CMakeLists.txt
src/Mod/Cam/: CMakeLists.txt
src/Mod/Cam/App/: CMakeLists.txt
src/Mod/Cam/Gui/: CMakeLists.txt
src/Mod/Complete/: CMakeLists.txt
src/Mod/Complete/App/: CMakeLists.txt
src/Mod/Complete/Gui/: CMakeLists.txt
src/Mod/Draft/: CMakeLists.txt
src/Mod/Drawing/: CMakeLists.txt
src/Mod/Drawing/App/: CMakeLists.txt  PreCompiled.h
src/Mod/Drawing/Gui/: CMakeLists.txt
src/Mod/Fem/: CMakeLists.txt
src/Mod/Fem/App/: CMakeLists.txt
src/Mod/Fem/Gui/: CMakeLists.txt
src/Mod/Idf/: CMakeLists.txt
src/Mod/Image/: CMakeLists.txt
src/Mod/Image/App/: CMakeLists.txt
src/Mod/Image/Gui/: CMakeLists.txt
src/Mod/Import/: CMakeLists.txt
src/Mod/Import/App/: CMakeLists.txt
src/Mod/Import/Gui/: CMakeLists.txt
src/Mod/Inspection/: CMakeLists.txt
src/Mod/Inspection/App/: CMakeLists.txt
src/Mod/Inspection/Gui/: CMakeLists.txt
src/Mod/Machining_Distortion/: CMakeLists.txt
src/Mod/Material/: CMakeLists.txt
src/Mod/Mesh/: CMakeLists.txt
src/Mod/Mesh/App/: CMakeLists.txt
src/Mod/Mesh/Gui/: CMakeLists.txt
src/Mod/MeshPart/: CMakeLists.txt
src/Mod/MeshPart/App/: CMakeLists.txt
src/Mod/MeshPart/Gui/: CMakeLists.txt
src/Mod/OpenSCAD/: CMakeLists.txt
src/Mod/Part/: CMakeLists.txt
src/Mod/Part/App/: CMakeLists.txt
src/Mod/Part/Gui/: CMakeLists.txt  Command.cpp  CrossSections.cpp  DlgBooleanOperation.cpp  DlgExtrusion.cpp  DlgFilletEdges.cpp  DlgFilletEdges.h  DlgPartBoxImp.cpp  DlgPartBoxImp.h  DlgPartCylinderImp.cpp  DlgPartCylinderImp.h  DlgPartImportIgesImp.cpp  DlgPartImportIgesImp.h  DlgPartImportStepImp.cpp  DlgPartImportStepImp.h  DlgPrimitives.cpp  DlgRevolution.cpp  Mirroring.cpp  TaskCheckGeometry.cpp  TaskDimension.cpp  TaskFaceColors.cpp  TaskLoft.cpp  TaskOffset.cpp  TaskShapeBuilder.cpp  TaskSweep.cpp
src/Mod/PartDesign/: CMakeLists.txt
src/Mod/PartDesign/App/: CMakeLists.txt
src/Mod/PartDesign/Gui/: CMakeLists.txt
src/Mod/Plot/: CMakeLists.txt
src/Mod/Points/: CMakeLists.txt
src/Mod/Points/App/: CMakeLists.txt
src/Mod/Points/Gui/: CMakeLists.txt
src/Mod/Raytracing/: CMakeLists.txt
src/Mod/Raytracing/App/: CMakeLists.txt
src/Mod/Raytracing/Gui/: CMakeLists.txt
src/Mod/ReverseEngineering/: CMakeLists.txt
src/Mod/ReverseEngineering/App/: CMakeLists.txt
src/Mod/ReverseEngineering/Gui/: CMakeLists.txt
src/Mod/Robot/: CMakeLists.txt
src/Mod/Robot/App/: CMakeLists.txt
src/Mod/Robot/Gui/: CMakeLists.txt
src/Mod/Sandbox/: CMakeLists.txt
src/Mod/Sandbox/App/: CMakeLists.txt
src/Mod/Sandbox/Gui/: CMakeLists.txt
src/Mod/Ship/: CMakeLists.txt
src/Mod/Sketcher/: CMakeLists.txt
src/Mod/Sketcher/App/: CMakeLists.txt
src/Mod/Sketcher/Gui/: CMakeLists.txt
src/Mod/Spreadsheet/: CMakeLists.txt
src/Mod/Start/: CMakeLists.txt
src/Mod/Start/App/: CMakeLists.txt
src/Mod/Start/Gui/: CMakeLists.txt
src/Mod/Start/StartPage/: CMakeLists.txt
src/Mod/TemplatePyMod/: CMakeLists.txt
src/Mod/Test/: CMakeLists.txt
src/Mod/Test/Gui/: CMakeLists.txt
src/Mod/Web/: CMakeLists.txt
src/Mod/Web/Gui/: CMakeLists.txt
